--- a/ERS_Project_1/src/main/webapp/WEB-INF/web.xml
+++ b/ERS_Project_1/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,19 @@ xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" 
 version="3.1">
   <display-name>ERS_Project_1</display-name>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+		<servlet-name>ViewServlet</servlet-name>
+		<servlet-class>com.revature.servlets.ViewServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>ViewServlet</servlet-name>
+		<url-pattern>*.view</url-pattern>
+	</servlet-mapping>
+  
 </web-app>
